【0.2.0】echo_clientのフッターマージン設定。

--- a/example/echo_client.html
+++ b/example/echo_client.html
@@ -29,10 +29,12 @@
       </nav>
     </div>
 
-    <div class="container">
+    <div class="container overflow-scroll" style="margin-bottom: 80px;">
       <p class="lead">Bamboo WebSocket Sample Chat🐼へようこそ</p>
 
       <div id="comments" class="container"></div>
+
+    </div>
 
     <div class="container fixed-bottom bg-dark">
       <div id="form" class="row p-3">
