--- a/example/echo_client.html
+++ b/example/echo_client.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WebSocket Chat</title>
+    <title>WebSocket echo chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css" />
@@ -11,7 +11,7 @@
 
     <div class="container pl-0 pr-0">
       <nav class="navbar navbar-dark bg-dark mb-2">
-        <a href="#" class="navbar-brand">Bamboo Sample Chat🐼</a>
+        <a href="#" class="navbar-brand">Bamboo Sample Echo Chat🐼</a>
         <button class="navbar-toggler" type="button"
             data-toggle="collapse"
             data-target="#navmenu1"
@@ -30,7 +30,7 @@
     </div>
 
     <div class="container overflow-scroll" style="margin-bottom: 80px;">
-      <p class="lead">Bamboo WebSocket Sample Chat🐼へようこそ</p>
+      <p class="lead">Bamboo WebSocket Sample Echo Chat🐼へようこそ</p>
 
       <div id="comments" class="container"></div>
 
@@ -112,7 +112,7 @@
       }
 
       const on_message = (event) => {
-        var elem = other_message_box(event)
+        var elem = echo_message_box(event)
         var comments = document.getElementById("comments");
         comments.appendChild(elem);
       }
@@ -149,9 +149,18 @@
       const send_message = () => 
       {
         const message = document.getElementById("m");
+        var date = new Date();
+
+        var message_json = {
+          id:   null,
+          type: "text",
+          message: message.value,
+          date: date.toLocaleString("ja")
+        };
+
         if(message.value.trim() != "") 
         { 
-          socket.send(message.value);
+          socket.send(JSON.stringify(message_json));
           var elem = self_message_box(message);
           var comments = document.getElementById("comments");
           comments.appendChild(elem);
@@ -195,18 +204,23 @@
         elem.classList.add('mb-2');
 
         var elem_left = document.createElement('div');
-        elem_left.classList.add('col-6');
+        elem_left.classList.add('col-12');
 
         var elem_right = document.createElement('div');
-        elem_right.classList.add('col-6');
+        elem_right.classList.add('col-12');
         elem_right.classList.add('bg-white');
         elem_right.classList.add('shadow-sm');
-        elem_right.classList.add('col-6');
         elem_right.classList.add('border');
         elem_right.classList.add('border-info');
         elem_right.classList.add('rounded');
         elem_right.classList.add('p-3');
-        elem_right.textContent = message.value;
+
+        var date = new Date();
+        var datestr = ('0' + date.getHours()).slice(-2)
+                + ':' + ('0' + date.getMinutes()).slice(-2)
+                + ':' + ('0' + date.getSeconds()).slice(-2);
+
+        elem_right.innerText = "Send Message: " + message.value;
 
         elem.appendChild(elem_left);
         elem.appendChild(elem_right);
@@ -217,25 +231,28 @@
       * 自身がメッセージを送信した際に画面上に表示する
       * メッセージボックスを表示させる
       */
-      const other_message_box = (event) =>
+      const echo_message_box = (event) =>
       {
         var elem = document.createElement('div');
         elem.classList.add('row');
         elem.classList.add('mb-2');
 
         var elem_left = document.createElement('div');
-        elem_left.classList.add('col-6');
+        elem_left.classList.add('col-12');
         elem_left.classList.add('bg-white');
         elem_left.classList.add('shadow-sm');
-        elem_left.classList.add('col-6');
         elem_left.classList.add('border');
-        elem_left.classList.add('border-info');
+        elem_left.classList.add('border-success');
         elem_left.classList.add('rounded');
         elem_left.classList.add('p-3');
-        elem_left.textContent = event.data;
+
+        var json = JSON.parse(event.data)
+
+        elem_left.innerText = "Echo Message: " + json["message"]  + "\n" +
+                              "Echo Datetime: " + json["date"];
         
         var elem_right = document.createElement('div');
-        elem_right.classList.add('col-6');
+        elem_right.classList.add('col-12');
 
         elem.appendChild(elem_left);
         elem.appendChild(elem_right);
