--- a/example/chat_example/chat_client.html
+++ b/example/chat_example/chat_client.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css" />
   </head>
-  <body class="bg-light">
+  <body id="body" class="bg-light">
 
     <div class="container pl-0 pr-0">
       <nav class="navbar navbar-dark bg-dark mb-2">
@@ -31,13 +31,15 @@
     <div class="container">
       <p class="lead">Bamboo WebSocket Sample Chat🐼へようこそ</p>
 
-      <div id="comments" class="container"></div>
-
-    <div class="container fixed-bottom bg-dark">
-      <div id="form" class="row p-3">
-        <input id="m" class="col-9" type="text" class="form-control" autocomplete="off"/><button type="button" class="btn btn-outline-info col-3" onclick="send_message()">送信</button>
+      <div id="message_container" class="container" style="padding-bottom: 70px;">
+        <div id="comments" class="container"></div>
       </div>
-    </div>
+      
+      <div class="container fixed-bottom bg-dark">
+        <div id="form" class="row p-3">
+          <input id="m" class="col-9" type="text" class="form-control" autocomplete="off"/><button type="button" class="btn btn-outline-info col-3" onclick="send_message()">送信</button>
+        </div>
+      </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -112,6 +114,10 @@
         var elem = other_message_box(event)
         var comments = document.getElementById("comments");
         comments.appendChild(elem);
+        // 最下部に移動
+        window.scroll(0, document.documentElement.clientHeight);
+        // フォーカス合わせ
+        document.getElementById("m").focus()
       }
 
       const on_close = (event) => {
@@ -153,6 +159,11 @@
           var comments = document.getElementById("comments");
           comments.appendChild(elem);
           message.value = "";
+          // 最下部に移動
+          window.scroll(0, document.documentElement.clientHeight);
+
+          // フォーカス合わせ
+          document.getElementById("m").focus()
         }
         return false;
       }
